# Mint-C

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_windows.bat  package-lock.json  package.json  vite.config.js
mint-lib/: CMakeLists.txt
mint-lib/include/: mint.h
mint-lib/include/cnn/layers/: activate_layer.h  batchnorm_layer.h  conv_layer.h  dense_layer.h  dropout_layer.h  flatten_layer.h  layer.h  pool_layer.h  softmax_layer.h
mint-lib/include/cnn/models/: model.h  sequential.h
mint-lib/include/process/: image.h  mnist.h  utils.h
mint-lib/src/cnn/layers/: activate_layer.cpp  batchnorm_layer.cpp  conv_layer.cpp  dense_layer.cpp  dropout_layer.cpp  flatten_layer.cpp  layers.cpp  pool_layer.cpp  softmax_layer.cpp
mint-lib/src/cnn/models/: model.cpp  sequential.cpp
mint-lib/src/process/: image.cpp  mnist.cpp  utils.cpp
server/: CMakeLists.txt  app_icon.rc
server/include/: api_handlers.h  resource.h
server/include/core/: config.h  evaluate_manager.h  logger.h  model_manager.h  train_manager.h
server/include/data/: dataset_manager.h  image_processor.h
server/src/: api_handlers.cpp  server.cpp
server/src/core/: config.cpp  evaluate_manager.cpp  logger.cpp  model_manager.cpp  train_manager.cpp
server/src/data/: dataset_manager.cpp  image_processor.cpp
webui/: index.html
webui/src/: App.vue  main.js
webui/src/api/: index.js
webui/src/components/: BackgroundAnimation.vue  GlobalCursor.vue  ModelLayerList.vue  NumericStepper.vue  SplashScreen.vue  StatCard.vue
webui/src/composables/: useAsyncOperation.js  usePersistedState.js  usePolling.js
webui/src/i18n/: index.js
webui/src/i18n/locales/: en-US.js  zh-CN.js
webui/src/plugins/: vuetify.js
webui/src/router/: index.js
webui/src/stores/: configStore.js  datasetStore.js  evaluationStore.js  logStore.js  modelStore.js  recognizeStore.js  snackbarStore.js  trainingStore.js
webui/src/styles/: global.scss
webui/src/utils/: formatters.js
webui/src/views/: Dashboard.vue  Datasets.vue  Evaluate.vue  Misc.vue  Model.vue  Recognize.vue  Train.vue
